--- a/HomePage.html
+++ b/HomePage.html
@@ -48,12 +48,12 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-12">
-                    <ul class="navbar">
-                        <li><a href="">Restoran Axtar</a></li>
-                        <li><a href="">Xəritədə Axtar</a></li>
-                        <li><a href="">Bloq Yazıları</a></li>
-                        <li><a href="">Haqqımızda</a></li>
-                        <li><a href="">Bizimlə əlaqə</a></li>
+                    <ul class="navigation-bar">
+                        <li><a href="">Search</a></li>
+                        <li><a href="">Map</a></li>
+                        <li><a href="">Blog</a></li>
+                        <li><a href="">About</a></li>
+                        <li><a href="">Contact</a></li>
                     </ul>
                 </div>
             </div>
@@ -61,11 +61,256 @@
     </nav>
     <main>
         <section>
+            <div class="coursel-box" style="position:relative;">
+                <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
+                    <div class="carousel-indicators">
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
+                            class="active" aria-current="true" aria-label="Slide 1"></button>
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                            aria-label="Slide 2"></button>
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                            aria-label="Slide 3"></button>
+                    </div>
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="assets/img/corusel image/img2.jpg" class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="assets/img/corusel image/single.jpg" class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="assets/img/corusel image/index-00_mv.jpg" class="d-block w-100" alt="...">
+                        </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+                        data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+                        data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
+                </div>
+                <div class="custom-shape-divider-bottom-1661330328">
+                    <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120"
+                        preserveAspectRatio="none">
+                        <path
+                            d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z"
+                            class="shape-fill"></path>
+                    </svg>
+                </div>
+            </div>
 
         </section>
+        <div class="container">
+            <section class="card-section">
+                <div class="row d-flex justify-content-between">
+                    <div class="col-sm-4">
+                        <h2>New restaurants</h2>
+                        <p>There are 119+ restaurants listed on Mymenu.az. <a href="#">See All</a></p>
+                    </div>
+                    <div class="col-sm-8 d-flex justify-content-end align-items-center">
+                        <a href=""><i class="fa-solid fa-earth-americas"></i> Show on Map</a>
+                    </div>
+                </div>
+                <div class="row cards-box">
+                    <div class="col-sm-3">
+                        <div class="card" style="width: 18rem; border: none;">
+                            <img src="assets/img/card image/qladvs4c.4is.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Chalet Steak & Wine House</h5>
+                                <p class="card-text">Tufandag Mountain Resort</p>
+                                <a href=""><i class="fa-solid fa-map"></i> Show on Map</a>
+                                <a href=""><i class="fa-solid fa-location-arrow"></i> See on Google</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-3 d-flex justify-content-center">
+                        <div class="card" style="width: 18rem;border: none">
+                            <img src="assets/img/card image/nskxtjij.mhe.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Daniz Hotel</h5>
+                                <p class="card-text">Sahil str., Lankaran</p>
+                                <a href=""><i class="fa-solid fa-map"></i> Show on Map</a>
+                                <a href=""><i class="fa-solid fa-location-arrow"></i> See on Google</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-3 d-flex justify-content-center">
+                        <div class="card" style="width: 18rem;border: none">
+                            <img src="assets/img/card image/3vgo5w2s.gyn.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Chalet Steak & Wine House</h5>
+                                <p class="card-text">Bayan village, Oghuz</p>
+                                <a href=""><i class="fa-solid fa-map"></i> Show on Map</a>
+                                <a href=""><i class="fa-solid fa-location-arrow"></i> See on Google</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-3 d-flex justify-content-end">
+                        <div class="card" style="width: 18rem;border: none">
+                            <img src="assets/img/card image/download.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Chalet Steak & Wine House</h5>
+                                <p class="card-text">Okhud village, Shaki</p>
+                                <a href=""><i class="fa-solid fa-map"></i> Show on Map</a>
+                                <a href=""><i class="fa-solid fa-location-arrow"></i> See on Google</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row mt-4">
+                    <div class="col-sm-12">
+                        <img class="w-100" src="assets/img/line/line.png" alt="">
+                    </div>
+                </div>
+            </section>
+            <article>
+                <div class="row">
+                    <div class="col-sm-5">
+                        t
+                    </div>
+                    <div class="col-sm-7">
+                        <div class="row">
+                            <div class="col-sm-4">
+                                <div class="row">
+                                    <div class="col-sm-12">
+                                        <div class="foot-card">
+                                            <div class="img-box">
+                                                <img src="" alt="">
+                                            </div>
+                                            <div class="f-c-body">
+                                                <h6>Kebabs</h6>
+                                                <p>Chunks of lamb soaked in a sauce of onion,...</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-sm-12">
+                                        <div class="foot-card">
+                                            <div class="img-box">
+                                                <img src="" alt="">
+                                            </div>
+                                            <div class="f-c-body">
+                                                <h6>Dovga</h6>
+                                                <p>This classic Azerbaijani soup is a healthy...</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-sm-12">
+                                        <div class="foot-card">
+                                            <div class="img-box">
+                                                <img src="" alt="">
+                                            </div>
+                                            <div class="f-c-body">
+                                                <h6>Tea</h6>
+                                                <p>In Azerbaijan, tea is synonymous with warmth and hospitality. </p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-sm-3">
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row mt-4 ">
+                    <div class="col-sm-12">
+                        <img class="w-100" src="assets/img/line/line.png" alt="">
+                    </div>
+                </div>
+            </article>
+            <section class="about-references mt-5 mb-5">
+                <div class="row">
+                    <div class="col-sm-6 pe-4">
+                        <h2 class="mb-5">About us</h2>
+                        <p>Azerbaijan has a rich and ancient cuisine. Sometimes the taste of the dishes is varied by
+                            region. Hence, local and international travelers wish to taste different dishes in the
+                            regions. According to conducted surveys, local and international travelers are struggled to
+                            find information about public catering facilities and using those services in the regions.
+                            The State Tourism Agency launches the project "Mymenu.az" to eliminate difficulties and
+                            increase the satisfaction of travelers. </p>
+
+                        <a class="read-more-startup" href="/about/">
+                            Read more
+                        </a>
+                    </div>
+                    <div class="col-sm-6">
+                        <h2 class=" mb-5">References</h2>
+                        <div class="row">
+                            <div class="col-sm-6 d-flex justify-content-center align-items-center">
+                                <a href="">
+                                    <img src="assets/img/references/logoaz.png" alt="">
+                                </a>
+                            </div>
+                            <div class="col-sm-6 d-flex justify-content-center align-items-center">
+                                <a href="">
+                                    <img src="assets/img/references/download.png" alt="">
+                                </a>
+                            </div>
+                            <div class="col-sm-6 d-flex justify-content-center align-items-center">
+                                <a href="">
+                                    <img src="assets/img/references/sahman.png" alt="">
+                                </a>
+                            </div>
+                            <div class="col-sm-6 d-flex justify-content-center align-items-center">
+                                <a href="">
+                                    <img src="assets/img/references/tvo.png" alt="">
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </section>
+        </div>
     </main>
     <footer>
-        hello
+
+        <div class="container">
+            <div class="row mt-4 ">
+                <div class="col-sm-12">
+                    <img class="w-100" src="assets/img/line/line.png" alt="">
+                </div>
+            </div>
+            <div class="row mt-5">
+                <div class="col-sm-3">
+                    <img src="assets/img/logo.png" alt="">
+                    <p>All rights reserved © 2022</p>
+                    <p>Designed & Developed by</p>
+                    <a href="">Triton Consulting MMC &</a>
+                    <a href="">Crocusoft MMC</a>
+                </div>
+                <div class="col-sm-3">
+                    <h6>MyMenu.az</h6>
+                    <ul>
+                        <li><a href="">Home Page</a></li>
+                        <li><a href="">Search</a></li>
+                        <li><a href="">Map</a></li>
+                        <li><a href="">About</a></li>
+                        <li><a href="">Contact</a></li>
+                        <li><a href="">Privacy Policy</a></li>
+                    </ul>
+                </div>
+                <div class="col-sm-3">
+                    <h6>Useful links</h6>
+                    <a href="">Dövlət Turizm Agentliyi</a>
+                </div>
+                <div class="col-sm-3">
+                    <h6 class="mb-0">Sosial media</h6>
+                    <ul class="d-flex"">
+                        <li><a href=""><i class=" fa-brands fa-facebook"></i></a></li>
+                        <li><a href=""><i class="fa-brands fa-instagram"></i></a></li>
+                        <li><a href=""><i class="fa-brands fa-linkedin"></i></a></li>
+                        <li><a href=""><i class="fa-brands fa-youtube"></i></a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
     </footer>
 
     <!--Aos JS Link-->
